kubernetes/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: document-vectorizer-stateful
  labels:
    app: document-vectorizer
spec:
  serviceName: document-vectorizer
  replicas: 1
  selector:
    matchLabels:
      app: document-vectorizer
  template:
    metadata:
      labels:
        app: document-vectorizer
    spec:
      containers:
      - name: document-vectorizer
        image: ghcr.io/organization/document-vectorizer:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
