kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: document-vectorizer-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9090
      targetPort: 80
      protocol: TCP
  selector:
    app: document-vectorizer
