kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-vectorizer-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: document-vectorizer-swiss-ai-center.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: document-vectorizer-service
            port:
              number: 80
  tls:
    - hosts:
        - document-vectorizer-swiss-ai-center.kube.isc.heia-fr.ch
